--- a/freeswitch/docker-compose-devel.yml
+++ b/freeswitch/docker-compose-devel.yml
@@ -15,5 +15,5 @@ services:
       - TRUNK_ACCOUNT
       - TRUNK_PASSWORD
     volumes:
-      - ./scratch:/scratch
+      - ./scratch/usr/local/freeswitch/conf:/usr/local/freeswitch/conf
       - ./templates:/templates
