workaround drachtio-srf issue with TLS authentication

--- a/drachtio-mrf/package.json
+++ b/drachtio-mrf/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "google-tts",
+  "name": "drachtio-mrf-sample",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
   "dependencies": {
     "config": "^3.0.1",
     "drachtio-fsmrf": "^1.2.8",
-    "drachtio-srf": "^4.4.2",
+    "drachtio-srf": "git://github.com/rjp44/drachtio-srf.git#4.4.2-authfix",
     "minimist": "^1.2.0",
     "ws": "^6.1.2"
   }
