--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,14 @@ version: '3'
 
 services:
   drachtio:
+    network_mode: "host"
     build:
       context: ./drachtio
     restart: unless-stopped
-    ports:
-      - "9022:9022"
-      - "5061:5061"
-      - "5060:5060"
+
 
   freeswitch-google:
+    network_mode: "host"
     build:
       context: ./freeswitch
     restart: unless-stopped
@@ -21,10 +20,6 @@ services:
       - FREESWITCH_DTLS_SIP_PORT=5081
       - FREESWITCH_RTP_START_PORT=25000
       - FREESWITCH_RTP_END_PORT=25020
-    ports:
-      - "8021:8021"
-      - "5080:5080"
-      - "5081:5081"
-      - "25000-25020:25000-25020"
+
     volumes:
       - ./credentials:/credentials
